--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
+        "kodepandai/laravel-rajaongkir": "^3.0",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
